Update panel & modal design, UI corrections

--- a/src/less/style.less
+++ b/src/less/style.less
@@ -58,6 +58,7 @@
 @import "includes/variables";
 @import "includes/angular";
 @import "includes/ng-strap";
+@import "includes/panel";
 @import "includes/main";
 @import "includes/history";
 @import "includes/participant";
