--- a/src/less/includes/history.less
+++ b/src/less/includes/history.less
@@ -1,3 +1,21 @@
+.history {
+  .debts-panel-heading {
+    padding: 0.7em 0.7em 0;
+
+    &:after {
+      margin-top: 0.5em;
+    }
+  }
+
+  .debts-panel-title {
+    font-size: 14px;
+  }
+
+  .debts-panel-body {
+    padding: 0.7em;
+  }
+}
+
 .history-group {
   font-size: 0.9em;
 }
