--- a/src/less/includes/main.less
+++ b/src/less/includes/main.less
@@ -44,48 +44,18 @@ a {
   font-weight: bold;
 }
 
+.margin-top-1 {
+  margin-top: 1em;
+}
+
+.margin-btm-0 {
+  margin-bottom: 0;
+}
+
 .margin-btm-1 {
   margin-bottom: 1em;
 }
 
 span[ng-click] {
   cursor: pointer;
-}
-
-.debts-panel {
-  background-color: @panel-bg;
-  border: 1px solid @main-brand-color;
-  border-radius: 4px;
-  margin-bottom: 10px;
-
-  @media (max-width: @screen-xs-max) {
-    margin-bottom: 30px;
-  }
-
-  &-heading {
-    padding: 10px 15px;
-    text-align: center;
-    border-bottom: 1px solid transparent;
-  }
-
-  &-heading-sm {
-    padding: 5px 15px;
-    border-bottom: 1px solid transparent;
-
-    h4 {
-      margin-top: 5px;
-      margin-bottom: 5px;
-      font-size: 14px;
-    }
-  }
-
-  &-body, &-footer {
-    padding-right: 15px;
-    padding-left: 15px;
-  }
-
-  &-body {
-    padding-top: 15px;
-    padding-bottom: 15px;
-  }
 }
