--- a/src/less/includes/modal.less
+++ b/src/less/includes/modal.less
@@ -1,28 +1,21 @@
-.modal {
-  &-header, &-body, &-footer {
-    padding-left: 30px;
-    padding-right: 30px;
+.modal-content {
+  border-radius: @border-radius-small;
+}
+
+.modal-header {
+  padding: 10px 12px;
+  border-radius: @border-radius-small;
+  background-color: #f6f7f8;
+
+  .close {
+    font-size: 2em;
   }
+}
 
-  &-header {
-    padding-top: 28px;
-    border-bottom: none;
+.modal-title {
+  font-weight: bold;
+}
 
-    .close {
-      position: absolute;
-      top: 0;
-      right: 0;
-      padding: 11px 15px 10px 10px;
-      font-size: 40px;
-    }
-
-    .modal-title {
-      font-size: 28px;
-    }
-  }
-
-  &-footer {
-    padding-bottom: 28px;
-    border-top: none;
-  }
+.modal-footer {
+  padding: 12px 10px;
 }
