Add margin to button glyphicons

--- a/src/less/includes/main.less
+++ b/src/less/includes/main.less
@@ -59,3 +59,23 @@ a {
 span[ng-click] {
   cursor: pointer;
 }
+
+.btn > .glyphicon {
+  margin-right: @padding-base-horizontal;
+}
+
+.btn-icon > .glyphicon {
+  margin-right: 0 !important;
+}
+
+.btn-lg > .glyphicon {
+  margin-right: @padding-large-horizontal;
+}
+
+.btn-sm > .glyphicon {
+  margin-right: @padding-small-horizontal;
+}
+
+.btn-xs > .glyphicon {
+  margin-right: @padding-xs-horizontal;
+}
