--- a/views/templates/error/404.jade
+++ b/views/templates/error/404.jade
@@ -4,5 +4,5 @@
     |  (404)
   p
     a.btn.btn-primary.btn-lg(ui-sref="home", type="button")
-      span.glyphicon.glyphicon-home(aria-hidden)
-      | &nbsp;#{t("app.errors.404.action")}
+      span.glyphicon.glyphicon-home(aria-hidden="true")
+      = t("app.errors.404.action")
