--- a/views/templates/error/default.jade
+++ b/views/templates/error/default.jade
@@ -4,4 +4,4 @@
   p
     a.btn.btn-primary.btn-lg(ui-sref="home", type="button")
       span.glyphicon.glyphicon-home(aria-hidden="true")
-      | &nbsp;#{t("app.errors.default.action")}
+      = t("app.errors.default.action")
