--- a/views/templates/event/includes/expense_creation_panel.jade
+++ b/views/templates/event/includes/expense_creation_panel.jade
@@ -51,4 +51,4 @@
       button.btn.btn-sm.btn-primary(type="submit" disable-on-request="" ng-disabled="xpensCtrl.form.$invalid"
           data-loading-text=t("app.expenses.create.loading"))
         span.glyphicon.glyphicon-plus(aria-hidden="true")
-        |  #{t("app.expenses.create.submit")}
+        = t("app.expenses.create.submit")
