--- a/views/templates/event/layout.jade
+++ b/views/templates/event/layout.jade
@@ -11,7 +11,7 @@
         .col-md-12.col-sm-3.col-xs-6
           button.btn.btn-action.btn-block.margin-btm-1(type="button" ng-click="model.addParticipant()")
             span.glyphicon.glyphicon-plus
-            |  #{t("app.event.add_p")}
+            = t("app.event.add_p")
       .row.hidden-sm.hidden-xs
         .col-md-12
           include includes/history
