--- a/views/templates/event/participants.jade
+++ b/views/templates/event/participants.jade
@@ -15,4 +15,4 @@
       .participant-thumbnail-edit
         button.btn.btn-action.btn-sm.btn-block(type="button" ng-click="participants.edit(participant)")
           span.glyphicon.glyphicon-pencil(aria-hidden="true")
-          |  #{t("app.participants.edit.label")}
+          = t("app.participants.edit.label")
