--- a/views/templates/modal/delete_expense_confirmation.jade
+++ b/views/templates/modal/delete_expense_confirmation.jade
@@ -10,4 +10,4 @@
   button.btn.btn-default.btn-sm(type="button" ng-click="model.close(false)")= t("app.modal.cancel")
   button.btn.btn-primary.btn-sm(type="button" ng-click="model.close(true)")
     span.glyphicon.glyphicon-ok(aria-hidden="true")
-    |  #{t("app.expenses.delete.confirm")}
+    = t("app.expenses.delete.confirm")
