--- a/views/templates/index.jade
+++ b/views/templates/index.jade
@@ -40,7 +40,7 @@ main
                       name="participant{{$index}}Share" required="" min="1")
               .col-md-1.col-sm-1.col-xs-3(ng-if="!$first")
                 .form-group
-                  button.btn.btn-danger.btn-lg(type="button" aria-label=t("app.home.create.remove_p")
+                  button.btn.btn-danger.btn-icon.btn-lg(type="button" aria-label=t("app.home.create.remove_p")
                       ng-click="model.removeParticipant($index)" title=t("app.home.create.remove_p"))
                     span.glyphicon.glyphicon-minus(aria-hidden="true")
             .row
@@ -48,7 +48,7 @@ main
                 .form-group.text-right
                   button.btn.btn-default.btn-lg(type="button" ng-click="model.addParticipant()")
                     span.glyphicon.glyphicon-plus(aria-hidden="true")
-                    | &nbsp;#{t("app.home.create.add_p")}
+                    = t("app.home.create.add_p")
             .row(ng-cloak="" ng-if="model.errors")
               .col-sm-10.col-sm-offset-1.col-xs-12
                 .alert.alert-danger
@@ -60,5 +60,5 @@ main
                   button.btn.btn-block.btn-primary.btn-lg(type="submit" disable-on-request=""
                       data-loading-text=t("app.home.create.loading") ng-disabled="eventForm.$invalid")
                     span.glyphicon.glyphicon-ok-circle(aria-hidden="true")
-                    |  #{t("app.home.create.create")}
+                    = t("app.home.create.create")
                 p.help-block= t("app.home.create.email_help")
