--- a/views/templates/modal/edit_participant.jade
+++ b/views/templates/modal/edit_participant.jade
@@ -33,4 +33,4 @@ form.form-horizontal(ng-submit="model.update(model.participant)" name="model.for
     button.btn.btn-primary.btn-sm(type="submit" ng-disabled="model.form.$pristine || model.form.$invalid"
         disable-on-request="" data-loading-text= t("app.participants.edit.loading"))
       span.glyphicon.glyphicon-ok(aria-hidden="true")
-      |  #{t("app.participants.edit.submit")}
+      = t("app.participants.edit.submit")
