--- a/views/templates/event/results.jade
+++ b/views/templates/event/results.jade
@@ -13,7 +13,7 @@
           input#nameFilter.form-control(type="text" placeholder="e.g. Lea" ng-model="results.filter.participantName")
       loading-spinner(ng-show="results.loading")
       .results
-        .participant-result(ng-repeat="participantResult in ::results.results | filter:results.filter")
+        .participant-result(ng-repeat="participantResult in results.results | filter:results.filter")
           .result-box
             .row
               .col-md-6.col-sm-6.col-xs-12
@@ -31,7 +31,7 @@
                         th= t("app.results.creditor")
                         th= t("app.results.debt")
                     tbody
-                      tr(ng-repeat="debt in ::participantResult.debtsDetails" debts-visual-indicator="")
+                      tr(ng-repeat="debt in ::participantResult.debtsDetails" debts-visual-indicator="::")
                         th(scope="row" ng-bind="::debt.creditorName")
                         td(ng-bind="::debt.mitigatedAmount | currency")
                     tfoot
