--- a/views/templates/event/includes/expenses_list_panel.jade
+++ b/views/templates/event/includes/expenses_list_panel.jade
@@ -19,8 +19,7 @@
       p #{t("app.expenses.shared")}&nbsp;
         span.text-bold(debts-inline-data="::expense.participantsNames")
     .panel-footer(ng-if="::expense.description" ng-bind="::expense.description")
-  loading-spinner(ng-show="listModel.loading")
-  .row.text-center(ng-hide="listModel.loading")
+  .row.text-center
     button.btn.btn-load-more.btn-sm(type="button" ng-click="listModel.loadMore()" ng-disabled="listModel.allLoaded")
       span.glyphicon.glyphicon-triangle-bottom(aria-hidden="true")
       = t("app.expenses.load_more")
