Change action buttons style

--- a/src/less/includes/element.less
+++ b/src/less/includes/element.less
@@ -27,11 +27,36 @@
 
 .event-layout-aside {
   @media (min-width: @screen-md-min) {
-    margin-top: 44px;
+    margin-top: 42px;
   }
 
-  .btn-action {
-    white-space: normal;
+ .action {
+   display: block;
+   padding: 0 0.5em;
+   height: 2em;
+   line-height: 2em;
+   font-size: 0.9em;
+   border-radius: @border-radius-small;
+   color: @text-color;
+
+   &:hover,
+   &:focus,
+   &:active {
+     background-color: #dcdee3;
+   }
+
+   &:hover,
+   &:focus {
+     text-decoration: none;
+   }
+
+   &:active {
+     text-decoration: underline;
+   }
+
+   > .glyphicon {
+     margin-right: 0.5em;
+   }
   }
 }
 
