--- a/src/less/includes/main.less
+++ b/src/less/includes/main.less
@@ -28,6 +28,10 @@ a {
   line-height: 35px;
 }
 
+.btn-debts-secondary {
+  .button-variant(@btn-debts-secondary-color; @btn-debts-secondary-bg; @btn-debts-secondary-border);
+}
+
 .btn-load-more {
   .button-variant(@btn-load-more-color; @btn-load-more-bg; @btn-load-more-border);
 }
