--- a/src/less/includes/variables.less
+++ b/src/less/includes/variables.less
@@ -16,6 +16,10 @@
 @padding-huge-vertical: 15px;
 @padding-huge-horizontal: 20px;
 
+@btn-debts-secondary-bg: @third-brand-color;
+@btn-debts-secondary-color: #fff;
+@btn-debts-secondary-border: darken(@btn-debts-secondary-bg, 5%);
+
 @btn-load-more-bg: @third-brand-color;
 @btn-load-more-color: #fff;
 @btn-load-more-border: darken(@btn-load-more-bg, 5%);
@@ -23,10 +27,6 @@
 @btn-options-bg: @fourth-brand-color;
 @btn-options-color: #fff;
 @btn-options-border: darken(@btn-options-bg, 5%);
-
-@btn-action-bg: @third-brand-color;
-@btn-action-color: #fff;
-@btn-action-border: darken(@btn-action-bg, 5%);
 
 @input-border-focus: @main-brand-color;
 
