--- a/views/templates/event/participants.jade
+++ b/views/templates/event/participants.jade
@@ -13,6 +13,6 @@
           li(ng-if="participant.email" ng-bind="participant.email")
           li.missing-email(ng-if="!participant.email")= t("app.participants.missing_email")
       .participant-thumbnail-edit
-        button.btn.btn-action.btn-sm.btn-block(type="button" ng-click="participants.edit(participant)")
+        button.btn.btn-debts-secondary.btn-sm.btn-block(type="button" ng-click="participants.edit(participant)")
           span.glyphicon.glyphicon-pencil(aria-hidden="true")
           = t("app.participants.edit.label")
