--- a/src/less/includes/variables.less
+++ b/src/less/includes/variables.less
@@ -1,4 +1,4 @@
-@icon-font-path: "/bower_components/bootstrap/fonts/";
+@fa-font-path: "/bower_components/fontawesome/fonts/";
 
 @main-brand-color: #ff895d;
 @second-brand-color: #d5eeff;
