--- a/src/less/style.less
+++ b/src/less/style.less
@@ -2,12 +2,11 @@
 @bootstrap-less-directory: "@{bower-components-directory}/bootstrap/less";
 @angular-motion-src-directory: "@{bower-components-directory}/angular-motion/src";
 
-
 @import "@{bootstrap-less-directory}/variables";
 @import "@{bootstrap-less-directory}/mixins";
 @import "@{bootstrap-less-directory}/normalize";
-@import "@{bootstrap-less-directory}/print";
-@import "@{bootstrap-less-directory}/glyphicons";
+//@import "@{bootstrap-less-directory}/print";
+//@import "@{bootstrap-less-directory}/glyphicons";
 @import "@{bootstrap-less-directory}/scaffolding";
 @import "@{bootstrap-less-directory}/type";
 //@import "@{bootstrap-less-directory}/code";
@@ -43,9 +42,9 @@
 @import "@{bootstrap-less-directory}/utilities";
 @import "@{bootstrap-less-directory}/responsive-utilities";
 
+@import "@{bower-components-directory}/fontawesome/less/font-awesome";
 
 @import (less) "@{bower-components-directory}/angular-loading-bar/src/loading-bar.css";
-
 
 //@import "@{angular-motion-src-directory}/collapse/collapse";
 @import "@{angular-motion-src-directory}/fade/fade";
@@ -53,7 +52,6 @@
 @import "@{angular-motion-src-directory}/fade-and-slide/fade-and-slide";
 //@import "@{angular-motion-src-directory}/flip/flip";
 //@import "@{angular-motion-src-directory}/slide/slide";
-
 
 @import "includes/variables";
 @import "includes/angular";
