--- a/views/templates/error/default.jade
+++ b/views/templates/error/default.jade
@@ -3,5 +3,5 @@
   p= t("app.errors.default.message")
   p
     a.btn.btn-primary.btn-lg(ui-sref="home", type="button")
-      span.glyphicon.glyphicon-home(aria-hidden="true")
+      i.fa.fa-home
       = t("app.errors.default.action")
