--- a/views/templates/event/layout.jade
+++ b/views/templates/event/layout.jade
@@ -11,10 +11,10 @@
     .event-layout-aside.col-md-2.col-xs-12.pull-right
       .row
         .col-md-12.col-sm-3.col-xs-6
-          ul.list-unstyled
+          ul.list-unstyled.list-icon
             li
               a.action(href="javascript:void(0)" ng-click="model.addParticipant()" title=addParticipantTranslation)
-                span.glyphicon.glyphicon-plus(aria-hidden="true")
+                i.fa.fa-user-plus
                 = addParticipantTranslation
       .row.hidden-sm.hidden-xs
         .col-md-12
