--- a/views/templates/event/results.jade
+++ b/views/templates/event/results.jade
@@ -8,7 +8,7 @@
       .filters.form-inline
         .form-group
           label(for="nameFilter")
-            span.glyphicon.glyphicon-filter
+            span.fa.fa-filter
             |  #{t("app.results.filter")}&nbsp;
           input#nameFilter.form-control(type="text" placeholder="e.g. Lea" ng-model="results.filter.participantName")
       .results
