--- a/views/templates/modal/delete_expense_confirmation.jade
+++ b/views/templates/modal/delete_expense_confirmation.jade
@@ -9,5 +9,5 @@
 .modal-footer
   button.btn.btn-default.btn-sm(type="button" ng-click="model.close(false)")= t("app.modal.cancel")
   button.btn.btn-primary.btn-sm(type="button" ng-click="model.close(true)")
-    span.glyphicon.glyphicon-ok(aria-hidden="true")
+    i.fa.fa-check
     = t("app.expenses.delete.confirm")
