--- a/views/templates/event/includes/expenses_list_panel.jade
+++ b/views/templates/event/includes/expenses_list_panel.jade
@@ -2,13 +2,13 @@
   .panel.panel-primary(ng-cloak="" ng-repeat="expense in listModel.expenses | orderBy:$index:true")
     .panel-heading
       .floating-options.dropdown
-        button#expenseMenu.btn.btn-options.dropdown-toggle(type="button" data-toggle="dropdown" aria-haspopup="true"
-            aria-expanded="true")
-          span.glyphicon.glyphicon-option-vertical(aria-hidden="true")
+        button#expenseMenu.btn.btn-options.btn-icon.dropdown-toggle(type="button" data-toggle="dropdown"
+            aria-haspopup="true" aria-expanded="true")
+          i.fa.fa-ellipsis-v
         ul.dropdown-menu.dropdown-menu-right(aria-labelledby="expenseMenu")
           li
             a(href="javascript:void(0)" ng-click="listModel.deleteExpense(expense)")
-              span.glyphicon.glyphicon-trash(aria-hidden="true")
+              i.fa.fa-trash-o
               |  #{t("app.expenses.delete.label")}
       h4
         span.text-bold {{::expense.amount | currency}}
@@ -21,5 +21,5 @@
     .panel-footer(ng-if="::expense.description" ng-bind="::expense.description")
   .row.text-center
     button.btn.btn-load-more.btn-sm(type="button" ng-click="listModel.loadMore()" ng-disabled="listModel.allLoaded")
-      span.glyphicon.glyphicon-triangle-bottom(aria-hidden="true")
+      i.fa.fa-arrow-circle-o-down
       = t("app.expenses.load_more")
