--- a/views/templates/event/participants.jade
+++ b/views/templates/event/participants.jade
@@ -14,5 +14,5 @@
           li.missing-email(ng-if="!participant.email")= t("app.participants.missing_email")
       .participant-thumbnail-edit
         button.btn.btn-debts-secondary.btn-sm.btn-block(type="button" ng-click="participants.edit(participant)")
-          span.glyphicon.glyphicon-pencil(aria-hidden="true")
+          i.fa.fa-pencil
           = t("app.participants.edit.label")
