--- a/views/templates/index.jade
+++ b/views/templates/index.jade
@@ -19,7 +19,7 @@ main
             .row
               .participants-header.col-sm-10.col-sm-offset-1.col-xs-12
                 h4
-                  span.glyphicon.glyphicon-user(aria-hidden="true")
+                  i.fa.fa-group
                   |  #{t("app.home.create.participants")}
             .row(ng-cloak="" ng-repeat="participant in model.event.participants")
               hr.visible-xs-block(ng-if="!$first")
@@ -42,12 +42,12 @@ main
                 .form-group
                   button.btn.btn-danger.btn-icon.btn-lg(type="button" aria-label=t("app.home.create.remove_p")
                       ng-click="model.removeParticipant($index)" title=t("app.home.create.remove_p"))
-                    span.glyphicon.glyphicon-minus(aria-hidden="true")
+                    i.fa.fa-trash-o
             .row
               .col-sm-10.col-sm-offset-1.col-xs-12
                 .form-group.text-right
                   button.btn.btn-default.btn-lg(type="button" ng-click="model.addParticipant()")
-                    span.glyphicon.glyphicon-plus(aria-hidden="true")
+                    i.fa.fa-user-plus
                     = t("app.home.create.add_p")
             .row(ng-cloak="" ng-if="model.errors")
               .col-sm-10.col-sm-offset-1.col-xs-12
@@ -59,6 +59,6 @@ main
                 .form-group
                   button.btn.btn-block.btn-primary.btn-lg(type="submit" disable-on-request=""
                       data-loading-text=t("app.home.create.loading") ng-disabled="eventForm.$invalid")
-                    span.glyphicon.glyphicon-ok-circle(aria-hidden="true")
+                    i.fa.fa-plus-square-o
                     = t("app.home.create.create")
                 p.help-block= t("app.home.create.email_help")
