Fix modal style

--- a/src/less/includes/modal.less
+++ b/src/less/includes/modal.less
@@ -4,7 +4,8 @@
 
 .modal-header {
   padding: 10px 12px;
-  border-radius: @border-radius-small;
+  border-top-left-radius: @border-radius-small;
+  border-top-right-radius: @border-radius-small;
   background-color: #f6f7f8;
 
   .close {
