--- a/views/templates/event/results.jade
+++ b/views/templates/event/results.jade
@@ -15,25 +15,28 @@
         .participant-result(ng-repeat="participantResult in results.results | filter:results.filter")
           .result-box
             .row
-              .col-md-6.col-sm-6.col-xs-12
+              .col-sm-6.col-xs-12
                 h2 {{::participantResult.participantName}}&nbsp;
                   span.label.label-primary
                     | {{::participantResult.participantShare, plural, =1 {1 #{shareLabel}} other {# #{shareLabel}s}}}
                 p= t("app.results.spent")
                   | &nbsp;
                   span.text-bold(ng-bind="::participantResult.totalSpent | currency")
-              .col-md-6.col-sm-6.col-xs-12
+              .col-sm-6.col-xs-12
                 .table-responsive
                   table.table
                     thead
                       tr
-                        th= t("app.results.creditor")
+                        th= t("app.results.participant")
                         th= t("app.results.debt")
+                        th= t("app.results.advance")
                     tbody
-                      tr(ng-repeat="debt in ::participantResult.debtsDetails" debts-visual-indicator="::")
-                        th(scope="row" ng-bind="::debt.creditorName")
-                        td(ng-bind="::debt.mitigatedAmount | currency")
+                      tr(ng-repeat="row in ::participantResult.details" debts-visual-indicator="::")
+                        th(scope="row" ng-bind="::row.participantName")
+                        td(ng-bind="::row.mitigatedDebt | currency")
+                        td(ng-bind="::row.advance | currency")
                     tfoot
                       tr
                         th(scope="row")= t("app.results.total")
                         td.text-bold(ng-bind="::participantResult.totalDebt | currency")
+                        td.text-bold(ng-bind="::participantResult.totalAdvance | currency")
