--- a/views/templates/event/includes/history.jade
+++ b/views/templates/event/includes/history.jade
@@ -2,7 +2,8 @@ section.history(ng-controller="HistoryController as history")
   .debts-panel
     .debts-panel-heading
       h4.debts-panel-title= t("app.history.title")
-        i.fa.fa-refresh.pull-right(ng-click="history.refresh()" bs-tooltip="" data-title=t("app.history.refresh"))
+        i.fa.fa-refresh.pull-right(ng-click="history.refresh()" bs-tooltip="" data-title=t("app.history.refresh")
+            data-container="body")
     .debts-panel-body
       .form-group.form-group-sm
         select.form-control(ng-model="history.filter" ng-change="history.refresh()"
@@ -11,7 +12,7 @@ section.history(ng-controller="HistoryController as history")
         .history-summary(ng-repeat="summary in history.summaries track by summary.id")
           time(ng-bind="::summary.creationDate | debtsTime")
           .history-summary-data
-            i.fa(debts-history-icon="")
+            i.fa(bs-tooltip="" debts-history-icon="" data-title="" data-container="body")
             span  {{::summary.data}}
       .history-more.text-center
         button.btn.btn-load-more.btn-xs(type="button" ng-click="history.loadMore()"
