--- a/src/less/includes/activity.less
+++ b/src/less/includes/activity.less
@@ -9,43 +9,42 @@
 .operation-line {
   position: relative;
   display: table-cell;
-  padding: 1em 2em;
+  padding: 1em 1.3em;
   vertical-align: middle;
   width: 3em;
   text-align: center;
 
-  &:after {
+  &:before {
     content: "";
     position: absolute;
     z-index: 1;
     top: -30%;
-    right: 0;
     bottom: -15%;
-    left: 0;
+    left: 50%;
     border-left: 2px solid @second-brand-color;
-    width: 0;
-    margin: auto;
+    margin-left: -1px;
   }
 
   > i {
     position: relative;
+    z-index: 2;
     width: 2em;
     height: 2em;
     line-height: 1.9em;
-    color: #ccc;
-    background: @body-bg;
+    text-align: center;
     border: 1px solid #ccc;
     border-radius: 100%;
-    z-index: 2;
-    text-align: center;
+    color: #ccc;
+    background-color: @body-bg;
   }
 }
 
 .operation-info {
+  position: relative;
   display: table-cell;
   padding: 1em 2em;
-  background-color: #fff;
   border-radius: @border-radius-base;
+  background-color: #fff;
 
   time {
     display: block;
@@ -67,8 +66,9 @@
   &:before {
     content: "";
     position: absolute;
-    left: 5.8em;
-    margin-top: 0.7em;
+    top: 50%;
+    left: -1.3em;
+    margin-top: -0.6em;
     border: 0.7em solid transparent;
     border-right-color: #fff;
   }
